<resources>
    <string name="app_name">MyFinances</string>
    <string name="title">MY FINANCES</string>
    <string name="public_data">Public data</string>
    <string name="password">Password</string>
    <string name="public_data_hint">enter username or email</string>
    <string name="enter_password">enter password</string>
    <string name="sign_in">sign in</string>
    <string name="sign_up">sign up</string>
    <string name="forgot_password">forgot password?</string>
    <string name="email">Email</string>
    <string name="email_hint">enter email</string>
    <string name="send_code_on">send code ></string>
    <string name="send_code_off">send code ̬̬again 01:00</string>
    <string name="code">Code</string>
    <string name="send_code_const_string">send code again</string>
    <string name="verify_error_message">Incorrect code! Try again</string>
    <string name="create_password_text">Create password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="repeat_enter_password">repeat password</string>
    <string name="repeat_password_error">repeat password does not match to initial password</string>
    <string name="user_exists">user with this email exists</string>
    <string name="title_activity_forgot_password_screen">Forgot password</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="email_not_exist">email does not exist</string>
    <string name="previous">Previous</string>
    <string name="Continue">continue</string>
    <string name="change_password_text">Change password</string>
    <string name="my_portfolio_observe">Обзор портфеля</string>
    <string name="my_portfolio_cost">Стоимость портфеля</string>
    <string name="my_portfolio_risk">Риск портфеля</string>
    <string name="my_portfolio_stocks_table_head_proportion">Доля</string>
    <string name="my_portfolio_stocks_table_head_income">Доход</string>
    <string name="my_portfolio_stocks_table_head_cost">Стоимость/Вложено</string>
    <string name="my_portfolio_stocks_table_head_title">Название</string>
    <string name="my_portfolio_table_default_state">У Вас нет приобретённых ценных бумаг</string>
    <string name="user_data">user_data</string>
    <string name="stock_cost">Цена</string>
    <string name="total_cost">Стоимость</string>
    <string name="stock_grow">Рост акций</string>
    <string name="choose_photo">Выбрать фотографию</string>
    <string name="profile_name_hint">Имя</string>
    <string name="profile_surname_hint">Фамилия</string>
    <string name="profile_login_hint">Логин</string>
    <string name="profile_email_hint">Электронная почта</string>
    <string name="profile_telephone_hint">Номер телефона</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>