<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/auth_background"
    android:gravity="center"
    tools:context=".activities.SignInScreen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="30dp"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:id="@+id/signUpPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/sign_up"
            android:textColor="@color/notActiveAuthPage"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="105dp"
            android:background="@drawable/sign_up_sign_in_rectangle_border"
            android:text="@string/sign_in"
            android:textColor="@color/marine"
            android:textSize="18dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rectangle_with_bottom_border">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/public_data"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <EditText
            android:id="@+id/publicData"
            android:layout_width="373dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:hint="@string/public_data_hint"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/hint"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rectangle_with_bottom_border">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <EditText
            android:id="@+id/password"
            android:layout_width="373dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/hint"
            android:textSize="16sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signInBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/sign_in"
        android:textColor="@drawable/button_text_states"
        android:textAllCaps="false"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_background_states"
        android:enabled="false">
    </androidx.appcompat.widget.AppCompatButton>

</LinearLayout>