<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/auth_background"
    android:gravity="center"
    tools:context=".activities.forgotpassword.ForgotPasswordScreen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="30dp"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/title_activity_forgot_password_screen"
            android:textColor="@color/forgot_password_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="monospace" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_gravity="left"
        android:layout_marginLeft="30dp"
        android:background="@drawable/rectangle_with_bottom_border">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <EditText
            android:id="@+id/email"
            android:layout_width="373dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:hint="@string/email_hint"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/hint"
            android:textSize="16sp" />
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continueBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/Continue"
        android:textColor="@drawable/button_text_states"
        android:textAllCaps="false"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_background_states"
        android:enabled="false">
    </androidx.appcompat.widget.AppCompatButton>

</LinearLayout>
    <!--                app:pinBackground=""-->
